# cyberdisc-bot

./: .dockerignore  .gitignore  .security.txt  .travis.yml  Bot Interface.py  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  app.yaml  assess.json  azure-pipelines.yml  bot.py  deploy.sh  deployment.yaml  docker-compose.yml  file  headquarters.json  headquarters.txt  id_rsa.enc  pyproject.toml  renovate.json  requirements-ci.txt  requirements.txt  thing.yml  tox.ini
.github/: dependabot.yml  labeler.yml  labels.json  labels.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  emoji_request.md
.github/workflows/: build.yml  codeql-analysis.yml  create-labels.yml  label-pull-requests.yml  labeler.yml  labels.yml  lint.yml  stale.yml  test-results.yml
.semaphore/: semaphore.yml
.well-known/: security.txt
azure-pipelines/: build-pipeline.yml  release-pipeline.yml
bot/: __main__.py  caesar.py  constants.py  log.py
bot/cogs/: admin.py  cyber.py  fun.py  general.py  nou.py  sound.py  voting.py
bot/data/: game.json
bot/data/legacy/: headquarters2018.json
bot/resources/: common_words.txt
cdbot/: __init__.py  __main__.py  bot.py  constants.py  log.py
cdbot/cogs/: admin.py  cyber.py  fun.py  general.py  help.py  maths.py  quoting.py
cdbot/data/: assess.json  game.json  readme.json  readme1.json  readme_raw.json
cyberdisc_bot/: bot.py  log.py
cyberdisc_bot/cogs/: cyber.py  fun.py  general.py
cyberdisc_bot/data/: assess.json
