[tool.poetry]
name = "cdbot"
version = "0.1.0"
description = "A Discord bot for the Cyber Discovery community."
authors = ["Cyber Discovery Community <triggerhappymods@cyberdiscoverycommunity.uk>"]
license = "MIT"

[tool.poetry.dependencies]
aiohttp = "^3"
"discord.py" = "^1.2.5"
python = "^3.7"
python-dateutil = "^2.8"
asyncpg = "^0.20.1"
sentry-sdk = "^0.14.0"
Pillow = "^7.0"
gitpython = "^3"

[tool.poetry.dev-dependencies]
flake8 = "^3.6.0"
flake8-bandit = "^2"
flake8-bugbear = "^20"
flake8-import-order = "^0.18"
flake8-string-format = "^0.2.3"
flake8-tidy-imports = "^4"
flake8-todo = "^0.7"
flake8-formatter-junit-xml = "^0.0.6"

[tool.poetry.scripts]
cdbot = "cdbot:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

